modfiy several places

--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
             <div class="row">
                 <div class="col-xs-6 ceremony">
                     <h2>婚礼仪式</h2>
-                    <p>12:00</p>
-                    <p>中国兰州国泰安宁大酒店<br>地址：<br>甘肃省兰州市安宁区北冰河路922号2层</p>
+                    <p>11:58 am</p>
+                    <p>中国兰州国泰安宁大酒店<br>地址：<br>甘肃省兰州市安宁区北滨河路922号2层</p>
                 </div><!-- .col-xs-6 .ceremony -->
                 <div class="col-xs-6 lunch">
                     <h2>午宴</h2>
-                    <p>13:00</p>
+                    <p>13:00 pm</p>
                     <p>地址同左</p>
                 </div><!-- .col-xs-6 .lunch -->
             </div>
