--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <span class="sr-only">Next</span>
                       </a>
                     </div>
-                    <p class="text-faded">2015年10月12日，这是秋天一个风和日丽的正午，我和朋友们偷偷商量好，瞒着雪霁说这一天在附近的一个公园会有露天演唱会。而我便假借带她去看演唱会之名，和她一起来到公园。到达后发现舞台上并没有演唱会，慢慢地我牵着她来到舞台中央。忽然好友们冲出来，鲜花和横幅已经祝福声中，我正式向她求婚。</p>
+                    <p class="text-faded">2015年10月12日，这是秋天一个风和日丽的正午，琦越和朋友们偷偷商量好，瞒着雪霁说这一天在附近的一个公园会有露天演唱会。而他便假借带她去看演唱会之名，和她一起来到公园。到达公园后发现舞台上并没有演唱会，慢慢地他牵着她来到舞台中央。忽然好友们冲出来，在鲜花和横幅以及祝福声中，他正式向她求婚。</p>
                 </div>
             </div>
 
